--- a/plugins-jquery-exercicio-exercicio_plugin_jquery/index.html
+++ b/plugins-jquery-exercicio-exercicio_plugin_jquery/index.html
@@ -63,11 +63,11 @@
     </div>
 </section>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script> <!-- o jquery deve ser sempre importado primeiro!-->
-    <script src="./js/jquery.mask.min.js"></script>
-    <script src="./js/jquery.validate.min.js"></script>
+    <script src="./js/jquery.mask.min.js"></script> <!-- plugin de máscara -->
+    <script src="./js/jquery.validate.min.js"></script> <!-- plugin de validação-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="./js/messages_pt_BR.min.js"></script>
+    <script src="./js/messages_pt_BR.min.js"></script> <!-- plugin para a mensagem de erro ficar em pt-br-->
     <script src="./js/main.js"></script>
     <script>
     
